--- a/plugin.xml
+++ b/plugin.xml
@@ -27,8 +27,9 @@
     <framework src="JavaScriptCore.framework"/>
 
 
-    <source-file framework="true" src="lib/ios/CouchbaseLite.framework"/>
-	<framework src="CouchbaseLite.framework"/>
+
+    <framework custom="true" embed="true" src="lib/ios/CouchbaseLite.framework"/>
+    <source-file src="lib/ios/CouchbaseLite.framework" target-dir="lib" framework="true" />
 
     <header-file src="lib/ios/CouchbaseLite.framework/Headers/CBLArray.h"/>
     <header-file src="lib/ios/CouchbaseLite.framework/Headers/CBLArrayFragment.h"/>
