--- a/plugin.xml
+++ b/plugin.xml
@@ -27,8 +27,7 @@
     <framework src="JavaScriptCore.framework"/>
 
 
-
-    <framework custom="true" embed="true" src="lib/ios/CouchbaseLite.framework"/>
+	<framework custom="true" embed="true" src="lib/ios/CouchbaseLite.framework"/>
     <source-file src="lib/ios/CouchbaseLite.framework" target-dir="lib" framework="true" />
 
     <header-file src="lib/ios/CouchbaseLite.framework/Headers/CBLArray.h"/>
@@ -97,23 +96,10 @@
       </feature>
     </config-file>
     <framework src="src/android/build.gradle" custom="true" type="gradleReference"/>
+    <framework src="build-extras.gradle" custom="true" type="gradleReference"/>
     <source-file src="src/android/CBLite.java" target-dir="src/com/couchbase/cblite/phonegap"/>
     <source-file src="lib/android/commons-io-2.0.1.jar" target-dir="libs"/>
-    <resource-file src="lib/android/couchbase-lite-android-1.4.1.aar" target="libs/couchbase-lite-android-1.4.1.aar"/>
-    <resource-file src="lib/android/couchbase-lite-android-sqlite-custom-1.4.1.aar" target="libs/couchbase-lite-android-sqlite-custom-1.4.1.aar"/>
-    <source-file src="lib/android/couchbase-lite-java-core-1.4.1.jar" target-dir="libs"/>
-    <source-file src="lib/android/couchbase-lite-java-javascript-1.4.1.jar" target-dir="libs"/>
-    <source-file src="lib/android/couchbase-lite-java-listener-1.4.1.jar" target-dir="libs"/>
-    <source-file src="lib/android/rhino-1.7R3.jar" target-dir="libs"/>
-    <source-file src="lib/android/servlet-2-3.jar" target-dir="libs"/>
-    <source-file src="lib/android/stateless4j-2.4.0.jar" target-dir="libs"/>
 	<framework src="com.squareup.okhttp3:okhttp:3.3.1"/>
 	<framework src="com.squareup.okio:okio:1.8.0"/>
-    <framework src="com.fasterxml.jackson.core:jackson-annotations:2.5.3"/>
-    <framework src="com.fasterxml.jackson.core:jackson-core:2.5.3"/>
-    <framework src="com.fasterxml.jackson.core:jackson-databind:2.5.3"/>
-    <framework src="com.fasterxml.jackson.module:jackson-module-afterburner:2.5.3"/>
-    <framework src="org.apache.commons:commons-collections4:4.1"/>
-	<resource-file src="lib/android/couchbase-lite-android-forestdb-1.4.1.aar" target="libs/couchbase-lite-android-forestdb-1.4.1.aar"/>
   </platform>
 </plugin>
