--- a/plugin.xml
+++ b/plugin.xml
@@ -89,8 +89,8 @@
     </config-file>
     <framework src="src/android/build.gradle" custom="true" type="gradleReference"/>
     <framework src="build-extras.gradle" custom="true" type="gradleReference"/>
-    <source-file src="src/android/CBLite.java" target-dir="src/com/couchbase/cblite/phonegap"/>
-    <source-file src="lib/android/commons-io-2.0.1.jar" target-dir="libs"/>
+    <resource-file src="src/android/CBLite.java" target-dir="src/com/couchbase/cblite/phonegap"/>
+    <resource-file src="lib/android/commons-io-2.0.1.jar" target-dir="libs"/>
 	<framework src="com.squareup.okhttp3:okhttp:3.3.1"/>
 	<framework src="com.squareup.okio:okio:1.8.0"/>
   </platform>
