--- a/plugin.xml
+++ b/plugin.xml
@@ -83,9 +83,9 @@
   <platform name="android">
     <framework src="src/android/build.gradle" custom="true" type="gradleReference"/>
     <framework src="build-extras.gradle" custom="true" type="gradleReference"/>
-    <resource-file src="src/android/CBLite.java" target-dir="src/com/couchbase/cblite/phonegap"/>
-    <resource-file src="lib/android/commons-io-2.0.1.jar" target-dir="libs"/>
-	<framework src="com.squareup.okhttp3:okhttp:3.9.1"/>
-	<framework src="com.squareup.okio:okio:1.13.0"/>
+    <source-file src="src/android/CBLite.java" target-dir="src/com/couchbase/cblite/phonegap"/>
+    <source-file src="lib/android/commons-io-2.0.1.jar" target-dir="libs"/>
+    <framework src="com.squareup.okhttp3:okhttp:3.9.1"/>
+    <framework src="com.squareup.okio:okio:1.13.0"/>
   </platform>
 </plugin>
