--- a/plugin.xml
+++ b/plugin.xml
@@ -81,7 +81,7 @@
     <header-file src="lib/ios/CouchbaseLite.framework/Headers/CouchbaseLite.h"/>
   </platform>
   <platform name="android">
-    <config-file target="res/xml/config.xml" parent="/*">
+    <config-file target="app/src/main/res/xml/config.xml" parent="/*">
       <feature name="CBLite">
         <param name="android-package" value="com.couchbase.cblite.phonegap.CBLite"/>
         <param name="onload" value="true"/>
